<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/header_text"
            style="@style/QuizTitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:text="@string/question1"
                style="@style/questions" />

            <EditText
                android:id="@+id/answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autofillHints="@string/question1_hint"
                android:hint="@string/question1_hint"
                android:inputType="number"
                tools:targetApi="o" />

            <TextView
                android:text="@string/question2"
                style="@style/questions"/>

            <RadioGroup
                android:id="@+id/answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <RadioButton
                    android:id="@+id/answer2_1"
                    android:text="@string/question2_option1"
                    style="@style/answers" />

                <RadioButton
                    android:id="@+id/answer2_2"
                    android:text="@string/question2_option2"
                    style="@style/answers" />

                <RadioButton
                    android:id="@+id/answer2_3"
                    android:text="@string/question2_option3"
                    style="@style/answers" />

            </RadioGroup>

            <TextView
                android:text="@string/question3"
                style="@style/questions" />

            <RadioGroup
                android:id="@+id/answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <RadioButton
                    android:id="@+id/answer3_1"
                    android:text="@string/question3_option1"
                    style="@style/answers" />

                <RadioButton
                    android:id="@+id/answer3_2"
                    android:text="@string/question3_option2"
                    style="@style/answers" />

                <RadioButton
                    android:id="@+id/answer3_3"
                    android:text="@string/question3_option3"
                    style="@style/answers" />

            </RadioGroup>

            <TextView
                android:text="@string/question4"
                style="@style/questions"/>

            <CheckBox
                android:id="@+id/answer4_1"
                android:text="@string/question4_option1"
                style="@style/answers" />

            <CheckBox
                android:id="@+id/answer4_2"
                android:text="@string/question4_option2"
                style="@style/answers" />

            <CheckBox
                android:id="@+id/answer4_3"
                android:text="@string/question4_option3"
                style="@style/answers" />

            <CheckBox
                android:id="@+id/answer4_4"
                android:layout_marginBottom="8dp"
                android:text="@string/question4_option4"
                style="@style/answers" />

            <TextView
                android:text="@string/question5"
                style="@style/questions" />

            <RadioGroup
                android:id="@+id/answer5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <RadioButton
                    android:id="@+id/answer5_1"
                    android:text="@string/question5_option1"
                    style="@style/answers" />

                <RadioButton
                    android:id="@+id/answer5_2"
                    android:text="@string/question5_option2"
                    style="@style/answers" />

            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="getResults"
                android:text="@string/submit_answers" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>